Fix scroll on titles that are too long

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -460,6 +460,7 @@ footer ul li:before{
 	width: auto;
 	text-overflow: clip;
 	animation: scroll-text 3s infinite alternate linear;
+	min-width: 100%;
 }
 
 
